# OptionSentry

./: .gitignore  AGENTS.md  README.md  config.example.toml  kuaiqi-gui.spec  kuaiqi_gui.py  main.py  optionsentry-gui.spec  optionsentry_gui.py  package.ps1  packages.md  pyproject.toml
.github/workflows/: release.yml
docs/: OptionSentry-用户使用文档.md  strategy_filter_accept.md  期权预警系统开发文档.md
filter_scripts/: by_expire_rest_days.py
kuaiqi/: __init__.py  alerts.py  cli.py  config.py  logging_config.py  models.py  notifiers.py  runner.py  strategies.py  symbols.py
kuaiqi/data_sources/: __init__.py  base.py  tqsdk_source.py
kuaiqi/gui/: __init__.py  app.py  config_store.py  credentials.py  runner_adapter.py
optionsentry/: __init__.py  alerts.py  cli.py  config.py  formatting.py  log_paths.py  logging_config.py  models.py  monitor_state.py  notifiers.py  runner.py  strategies.py  strategy_base.py  strategy_filters.py  strategy_registry.py
optionsentry/data_sources/: __init__.py  base.py  (+1 more)
tests/: helpers.py  test_alerts.py  test_config.py  test_formatting.py  test_gui_config_store.py  test_gui_credentials.py  test_gui_filter_validation.py  test_gui_monitor_state.py  test_gui_runner_adapter.py  test_gui_smoke.py  test_gui_strategy_parameters.py  test_gui_update_buffer.py  test_incremental_alerts.py  test_logging_paths.py  test_monitor_state.py  test_notifiers.py  test_runner.py  test_strategies.py  test_strategy_filters.py  test_strategy_registry.py  test_tqsdk_exchange_market_data_dump.py  test_universe.py
user_filter_scripts/: by_expire_rest_days.py  by_expiry.py
(+21 files in other folders)
