[project]
name = "optionsentry"
version = "0.1.1"
description = "OptionSentry futures option alert system"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.11.0",
    "tomlkit>=0.15.0",
    "tqsdk>=3.10.1",
]

[project.scripts]
optionsentry = "optionsentry.cli:main"
optionsentry-gui = "optionsentry.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]
